--- a/src/components/CheckoutSideMenu/styles.css
+++ b/src/components/CheckoutSideMenu/styles.css
@@ -1,5 +1,14 @@
 .checkout-side-menu {
-  width: 500px;
-  height: calc(100vh - 81px);
+  width: 100%; /* Ocupa todo el ancho en pantallas pequeñas */
+  max-width: 500px; /* Límite en pantallas grandes */
+  height: calc(100vh - 81px); /* Altura ajustada */
   top: 81px;
+}
+
+.checkout-side-menu {
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(100%); /* Oculto por defecto */
+}
+.checkout-side-menu.flex {
+  transform: translateX(0); /* Visible cuando está abierto */
 }
